# Machi-Koro

./: .gitignore  CMakeLists.txt  README.md
debug/: CMakeLists.txt  PreLoad.cmake
include/: game_core.h  string_functions.h
src/: game_core.c  main.c  string_functions.c
